# pyramid_precis_creative_template

./: .gitignore  DEVELOPMENT.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml
creative_template/: __init__.py
creative_template/models/: base_model.py  resume_model.py
creative_template/static/css/: theme.css
creative_template/static/icomoon/: style.css
creative_template/templates/: details.jinja2  heading.jinja2
docs/: conf.py  index.rst  installation.rst  usage.rst
pyramid_precis_creative_template/: __init__.py  models.py
pyramid_precis_creative_template/static/css/: creative.css  resume.css
pyramid_precis_creative_template/templates/: resume.jinja2
tests/: __init__.py  test_pyramid_precis_creative_template.py
